# edsl-mlir

./: .gitignore  README.md  pyproject.toml  setup.py
edsl/: CMakeLists.txt  driver.py
edsl/compiler/: CMakeLists.txt
edsl/compiler/binding/: binding.cpp
edsl/compiler/include/: edsl.h
edsl/compiler/lib/: CMakeLists.txt  edsl.cpp
edsl/compiler/misc/: __init__.py
